--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,11 @@
 spring.application.name=reservasapp
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/reservas_db
+spring.datasource.username=reservas_user
+spring.datasource.password=reservas_pass
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.open-in-view=false
